--- a/d3.css
+++ b/d3.css
@@ -1,3 +1,49 @@
+.bar
+{
+    fill: orange;
+    stroke: oranged;
+    margin: 3px 3px;
+    display: inline-block;
+    border:3px outset #69c;
+    border-bottom:1px solid #000;
+    border-radius:2px 2px 0 0;
+
+}
+.bar:hover {
+    fill: orangered;
+}
+.label
+{
+    font-family: Verdana;
+    font-size: 15pt;
+    color: gray;
+    fill-opacity: .6;
+}
+.x_axis,
+.y_axis {
+    font-size: .6em;
+    fill: none;
+    stroke: grey;
+    stroke-width: 1;
+    shape-rendering: crispEdges;
+}
+.value
+{
+    font-family: Verdana;
+    font-size: 11pt;
+    color: gray;
+    fill-opacity: .6;
+}
+
+.tick_label
+{
+    font-size: 15pt;
+    font-family: Verdana;
+    color: gray;
+    fill-opacity: .6;
+}
+
+
 .d3-tip {
   line-height: 1;
   font-weight: bold;
