--- a/d3.css
+++ b/d3.css
@@ -68,6 +68,10 @@ span
   border-radius: 2px;
 }
 
+.grey { 
+  color: #ccc;
+}
+
 /* Creates a small triangle extender for the tooltip */
 .d3-tip:after {
   box-sizing: border-box;
